# backlight_control

./: .gitignore  .pre-commit-config.yaml  config.yaml  pyproject.toml  requirements.txt
backlight_control/: __main__.py  activity_monitor.py  hub.py  keyboard_backlight.py  light_sensor.py  types.py
backlight_control/plugins/activity_monitor/: gnome_dbus.py  gnome_dbus_org.gnome.Mutter.IdleMonitor.Core.xml  wayland.py  wlroots.py  xlib_xinput.py  xlib_xss_xinput_mixed.py
backlight_control/plugins/keyboard_backlight/: dbus_gnome.py  dbus_gnome_org.gnome.SettingsDaemon.Power.xml  dbus_upower.py  dbus_upower_org.freedesktop.UPower.KbdBacklight.xml  xbacklight.py
backlight_control/plugins/light_sensor/: dbus_sensorproxy.py  dbus_sensorproxy_net.hadess.SensorProxy.xml
